k8s/external-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: approval-handler-external-route
  namespace: argo-access-control
  labels:
    app.kubernetes.io/name: approval-handler
    app.kubernetes.io/component: httproute
    app.kubernetes.io/part-of: argo-access-control
spec:
  hostnames:
    - hooks.example.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: hooks-external-gateway
      namespace: dev-stage-common-infra
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /approval-handler/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains"
      backendRefs:
        - kind: Service
          name: approval-handler
          port: 8080
